# database-management

./: CMakeLists.txt  README.md
include/: database.h  index.h  query_executor.h  storage_engine.h  table.h  transaction_manager.h
src/: database.cpp  index.cpp  query_executor.cpp  storage_engine.cpp  table.cpp  transaction_manager.cpp
